--- a/mod.conf
+++ b/mod.conf
@@ -1,1 +1,4 @@
 name = skygen
+title = SkyGen
+description = Controls the sky, fog and celestial vault settings, and interpolates them based on the current biome. Also allows custom skybox registration.
+author = the_raven_262
